usr/src/lib/libc/i386/fp/_X_cplx_mul.c
@@ -24,8 +24,6 @@
  * Use is subject to license terms.
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 /*
  * _X_cplx_mul(z, w) returns z * w with infinities handled according
  * to C99.
@@ -83,7 +81,7 @@ testinfl(long double x)
 long double _Complex
 _X_cplx_mul(long double _Complex z, long double _Complex w)
 {
-	long double _Complex	v;
+	long double _Complex	v = 0;
 	long double		a, b, c, d, x, y;
 	int			recalc, i, j;
 
